<resources>
    <string name="app_name">AppChatFB</string>
    <string name="tvemail">Email Address</string>
    <string name="email">Email</string>
    <string name="tvpass">Password</string>
    <string name="et_pass">Pass</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_account">Create Account</string>
    <string name="user_name">User name</string>
    <string name="email_adress">Email Adress</string>
    <string name="password">Password</string>
    <string name="singIN">Sing In</string>
    <string name="register">Register</string>
    <string name="email_dangki">Email đăng kí của bạn là gì</string>
    <string name="get_pass">Get Pass</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textanswer">Bạn có đồng ý làm bạn không</string>
    <string name="deny">Từ chối</string>
    <string name="accout_settings">Accout Settings</string>
    <string name="all_user">All User</string>
    <string name="log_out">Log out</string>
    <string name="addfriend">+</string>
    <string name="default_notification_channel_id">channelid</string>
    <string name="default_notification_channel_name">channelnam</string>
    <string name="msg_token_fmt">messagetoken</string>
</resources>
