<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="itemclick"
            type="com.example.appchatfb.ClickDangNhap" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_backround"
        tools:context=".DangNhap">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="324dp"
            android:layout_height="418dp"
            android:background="#ffff"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/tvemail"
                android:textColor="#E91E63"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@id/textView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvpass"
                android:textColor="#E91E63"
                app:layout_constraintStart_toStartOf="@+id/et_email"
                app:layout_constraintTop_toBottomOf="@id/et_email"
                tools:layout_editor_absoluteY="93dp" />

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/et_pass"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@id/textView2" />

            <Button
                android:id="@+id/btn_sing_in"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:background="#FF5722"
                android:onClick="@{()->itemclick.clickDangNhap()}"
                android:text="@string/singIN"
                app:layout_constraintEnd_toEndOf="@+id/et_pass"
                app:layout_constraintHorizontal_bias="0.475"
                app:layout_constraintStart_toStartOf="@+id/et_pass"
                app:layout_constraintTop_toBottomOf="@+id/et_pass" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="OR"
                app:layout_constraintEnd_toEndOf="@+id/btn_sing_in"
                app:layout_constraintHorizontal_bias="0.471"
                app:layout_constraintStart_toStartOf="@+id/btn_sing_in"
                app:layout_constraintTop_toBottomOf="@+id/btn_sing_in" />

            <Button
                android:id="@+id/btn_regis"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:background="#FF5722"
                android:onClick="@{()->itemclick.chuyenmanhinh()}"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="@+id/btn_sing_in"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/btn_sing_in"
                app:layout_constraintTop_toBottomOf="@+id/btn_sing_in" />

            <Button
                android:id="@+id/tv_forgot"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:background="#ffff"
                android:onClick="@{()->itemclick.chuyenMHForgetPass()}"
                android:text="@string/forgot_password"
                app:layout_constraintEnd_toEndOf="@+id/et_pass"
                app:layout_constraintTop_toBottomOf="@+id/et_pass" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>