<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="event"
            type="com.example.appchatfb.interfacefunc.Event" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_backround"
        tools:context=".Register">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="324dp"
            android:layout_height="418dp"
            android:background="#ffff"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/img_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/regis_user"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/img_user"
                app:layout_constraintBottom_toBottomOf="@id/img_user"
                android:hint="@string/user_name"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="10dp" />

            <ImageView
                android:id="@+id/img_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:background="@drawable/email"
                app:layout_constraintStart_toStartOf="@+id/img_user"
                app:layout_constraintTop_toBottomOf="@id/img_user" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_adress"
                app:layout_constraintStart_toEndOf="@id/img_email"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@id/img_email" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_pass"
                android:layout_marginTop="68dp"

                android:background="@drawable/password"
                app:layout_constraintStart_toStartOf="@+id/img_email"
                app:layout_constraintTop_toBottomOf="@id/img_email" />

            <EditText
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:id="@+id/et_pass"
                android:hint="@string/password"
                app:layout_constraintStart_toEndOf="@id/img_pass"
                app:layout_constraintBottom_toBottomOf="@id/img_pass"
                android:layout_marginLeft="10dp" />

            <Button
                android:id="@+id/btn_dangki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:background="#FF5722"
                android:onClick="@{()->event.onClick()}"
                app:layout_constraintStart_toStartOf="@id/et_pass"
                app:layout_constraintEnd_toEndOf="@id/et_pass"
                app:layout_constraintTop_toBottomOf="@id/et_pass"
                android:layout_marginTop="40dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>